fixed alignment

--- a/designNewsletter/frontPage/style.css
+++ b/designNewsletter/frontPage/style.css
@@ -43,6 +43,7 @@ body {
   }
   .address{
     font-size: 15px;
+    text-align: center;
   }
 
   .marquee-container {
